--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "نظام الأرشفة الموحد - زوايا البناء - Frontend",
   "scripts": {
     "build": "next build",
+    "export": "next build && next export -o out",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
