--- a/package.json
+++ b/package.json
@@ -5,12 +5,41 @@
   "description": "نظام الأرشفة الموحد - زوايا البناء - Frontend",
   "scripts": {
     "build": "next build",
-    "export": "next build && next export -o out",
+    "export": "next build && next export",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "start": "next start",
+    "build:backend": "npm ci --prefix backend && npm run build --prefix backend",
+    "start:backend": "npm start --prefix backend"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@vercel/analytics": "^1.6.1",
     "@vitejs/plugin-react": "5.1.2",
     "@zxing/library": "^0.21.3",
@@ -18,12 +47,15 @@
     "body-parser": "2.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cors": "2.8.5",
     "dotenv": "17.2.3",
+    "embla-carousel-react": "^8.6.0",
     "express": "5.2.1",
     "express-validator": "7.3.1",
     "helmet": "8.1.0",
     "html2canvas": "^1.4.1",
+    "input-otp": "^1.4.2",
     "jiti": "latest",
     "jsbarcode": "^3.11.6",
     "jsonwebtoken": "9.0.3",
@@ -33,15 +65,20 @@
     "lucide-react": "^0.562.0",
     "morgan": "1.10.1",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pg": "8.16.3",
     "qrcode": "^1.5.4",
     "react": "^19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.69.0",
+    "react-resizable-panels": "^4.0.15",
     "react-webcam": "^7.2.0",
     "recharts": "^3.6.0",
     "sass": "latest",
     "sass-embedded": "latest",
+    "sonner": "^2.0.7",
     "stylus": "latest",
     "sugarss": "latest",
     "tailwind-merge": "^3.4.0",
@@ -50,14 +87,20 @@
     "tsx": "latest",
     "tw-animate-css": "^1.4.0",
     "uuid": "13.0.0",
+    "vaul": "^1.1.2",
     "vite": "7.3.0",
     "yaml": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.9",
     "typescript": "~5.8.2"
