--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.6.6",
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
