chore: harden .htaccess — guard Options, add DirectoryIndex for /archive, avoid Access-Control-Allow-Headers to prevent 500s

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -30,4 +30,6 @@
 # END WordPress
 
 # Security: prevent directory listing
-Options -Indexes
+<IfModule mod_autoindex.c>
+  Options -Indexes
+</IfModule>
