--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "نظام الأرشفة الموحد - زوايا البناء - Frontend",
   "scripts": {
     "build": "next build",
-    "export": "next build && next export",
+    "export": "next build",
     "dev": "next dev",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "start": "next start",
