--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5"
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -30,6 +30,7 @@
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.6.6",
     "@types/multer": "^1.4.7",
+    "@types/node-fetch": "^2.6.5",
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
