--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
+    "@fontsource/noto-sans-arabic": "^5.2.10",
     "@supabase/supabase-js": "^2.89.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fontkit": "^1.8.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "pdf-lib": "^1.17.1",
-    "fontkit": "^1.8.5",
     "pg": "^8.11.3"
   },
   "devDependencies": {
