--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:backend": "npm start --prefix backend"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
