--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@fontsource/noto-sans-arabic": "^5.2.10",
     "@supabase/supabase-js": "^2.89.0",
     "arabic-reshaper": "^1.1.0",
