--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,14 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": ["**/?(*.)+(spec|test).[tj]s?(x)"],
+    "moduleFileExtensions": ["ts","js","json","node"]
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
@@ -42,6 +49,9 @@
     "@types/pg": "^8.6.6",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.3"
   }
 }
