--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
     "@aws-sdk/client-s3": "^3.958.0",
     "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@fontsource/noto-sans-arabic": "^5.2.10",
-    "@supabase/supabase-js": "^2.89.0",
     "arabic-reshaper": "^1.1.0",
     "bcrypt": "^5.1.1",
     "bidi-js": "^1.0.3",
@@ -52,6 +51,8 @@
     "typescript": "^5.3.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.3"
+    "@types/jest": "^29.5.3",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   }
 }
