--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,15 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/?(*.)+(spec|test).[tj]s?(x)"],
-    "moduleFileExtensions": ["ts","js","json","node"]
+    "testMatch": [
+      "**/?(*.)+(spec|test).[tj]s?(x)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
@@ -24,6 +31,7 @@
     "arabic-reshaper": "^1.1.0",
     "bcrypt": "^5.1.1",
     "bidi-js": "^1.0.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -39,21 +47,22 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.10.6",
     "@types/node-fetch": "^2.6.5",
     "@types/pg": "^8.6.6",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.3",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
