--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "check:fonts": "node scripts/check-fonts.js",
     "start": "node dist/server.js",
     "test": "jest --config ./jest.config.cjs",
-    "test:watch": "jest --config ./jest.config.cjs --watchAll"
+    "test:watch": "jest --config ./jest.config.cjs --watchAll",
+    "backup:schedule": "node ./dist/lib/backup-scheduler.js"
   },
   "jest": {
     "preset": "ts-jest",
@@ -43,7 +44,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
