--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
     "fontkit": "^1.8.5",
     "helmet": "^7.1.0",
