Arabic stamp: complete PNG generation solution with canvas
- Install canvas and bwip-js packages for native RTL/BiDi support
- Create stamp-image-generator.ts with generateStampImage() function
  * Uses canvas with ctx.direction='rtl' for proper Arabic rendering
  * Generates barcode locally with bwip-js (no external API)
  * Registers NotoSansArabic-Bold font for Arabic text
  * Returns PNG buffer ready for embedding
- Refactor stamp.ts (963 -> 602 lines, -361 lines)
  * Remove all manual Arabic processing/shaping code
  * Remove barcode API fetching
  * Remove complex font embedding logic
  * Replace text drawing with single PNG embedding
  * Simplify to: generate PNG -> embed -> draw image
- Update render.yaml with canvas native dependencies
  * Install cairo, pango, libjpeg, libgif, librsvg
- This is the FINAL solution for Arabic rendering issues
  * canvas library has native HarfBuzz support
  * Guarantees proper Arabic letter connections
  * No more manual BiDi/shaping/reversal issues

--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,10 @@ services:
     name: zaco-backend
     env: node
     rootDirectory: backend
-    buildCommand: npm ci && npm run build
+    buildCommand: |
+      apt-get update && \
+      apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev && \
+      npm ci && \
+      npm run build
     startCommand: npm start
+
