--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
     "arabic-reshaper": "^1.1.0",
     "bcrypt": "^5.1.1",
     "bidi-js": "^1.0.3",
+    "bwip-js": "^4.8.0",
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
