--- a/backend/package.json
+++ b/backend/package.json
@@ -51,26 +51,26 @@
     "multer": "^1.4.4",
     "nodemailer": "^7.0.12",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "@types/nodemailer": "^7.0.4",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.10.6",
     "@types/node-fetch": "^2.6.5",
-    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   }
 }
