--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,37 +13,37 @@
   "categories": ["business", "productivity"],
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/mdlbeast/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon.jpg",
+      "src": "/mdlbeast/icon.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "/icon-light-32x32.jpg",
+      "src": "/mdlbeast/icon-light-32x32.jpg",
       "sizes": "32x32",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "/icon-dark-32x32.jpg",
+      "src": "/mdlbeast/icon-dark-32x32.jpg",
       "sizes": "32x32",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "/apple-icon.jpg",
+      "src": "/mdlbeast/apple-icon.jpg",
       "sizes": "180x180",
       "type": "image/jpeg",
       "purpose": "apple touch icon"
     },
     {
-      "src": "/favicon.jpg",
+      "src": "/mdlbeast/favicon.jpg",
       "sizes": "64x64",
       "type": "image/jpeg",
       "purpose": "any"
