--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,4 +4,4 @@ DATABASE_URL=postgresql://mdlbeastdb_user:<PASSWORD>@dpg-host.example.com/mdlbea
 JWT_SECRET=your_jwt_secret_here
 PORT=3001
 NODE_ENV=production
-FRONTEND_URL=https://zaco.sa/mdlbeast
+FRONTEND_URL=https://your-frontend-url.com
