✨ Rebuild app structure: Remove old dashboard, simplify app router
- Deleted old app/dashboard/page.tsx (was using removed tenant APIs)
- Deleted app/globals.css (duplicate of styles/globals.css)
- Recreated minimal app/layout.tsx and app/page.tsx
- app/page.tsx now imports root App.tsx component
- Fixed package.json lint script
- Backend build: ✅ Success (no errors)
- Frontend build: ✅ Success (3 static pages)
- ESLint: ✅ 0 errors, 91 warnings (minor unused vars)
- Project now fully functional without tenant management

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "export": "next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "next lint --dir .",
     "start": "next start",
     "build:backend": "npm ci --prefix backend && npm run build --prefix backend",
     "start:backend": "npm start --prefix backend"
