--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Backend example env file
 # Replace placeholder values with your real values in a non-committed .env file
-DATABASE_URL=postgresql://mdlbeastdb_user:<PASSWORD>@dpg-host.example.com/mdlbeastdb
+DATABASE_URL=<POSTGRES_CONNECTION_STRING>
 JWT_SECRET=your_jwt_secret_here
 PORT=3001
 NODE_ENV=production
